# advent-of-code

./: .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  advent-of-code.cabal  get_data.py  init  init_day.py  pyproject.toml
AocHaskell/: Input.hs
aoc-2015/day-01/: README.md  day_1.hs
aoc-2015/day-02/: README.md  day_2.hs
aoc-2015/day-03/: README.md  day_3.hs
aoc-2015/day-04/: README.md  day_4.hs
aoc-2015/day-05/: README.md  day_5.hs
aoc-2015/day-06/: README.md  day_6.hs  day_6.py
aoc-2015/day-07/: README.md  day_7.hs
aoc-2015/day-08/: README.md  day_8.hs
aoc-2015/day-09/: README.md  day_9.hs
aoc-2015/day-10/: README.md  day_10.hs
aoc-2015/day-11/: README.md  day_11.hs
aoc-2015/day-12/: README.md  day_12.hs
aoc-2015/day-13/: README.md  day_13.hs
aoc-2015/day-14/: README.md  day_14.hs
aoc-2015/day-15/: README.md  day_15.hs
aoc-2015/day-16/: README.md  day_16.hs
aoc-2015/day-17/: README.md  day_17.hs
aoc-2015/day-18/: README.md  day_18.py
aoc-2015/day-19/: README.md  day_19.hs  day_19.py
aoc-2015/day-20/: README.md  day_20.cpp  day_20.hs
aoc-2015/day-21/: README.md  day_21.hs
aoc-2016/01/: 1.ipynb
aoc-2016/02/: 2.ipynb
aoc-2016/03/: 3.ipynb
aoc-2016/04/: 4.ipynb  decrypted.txt
aoc-2016/05/: 5.ipynb
aoc-2016/06/: 6.ipynb
aoc-2016/07/: 7.ipynb
aoc-2016/08/: 8.ipynb
aoc-2016/09/: 9.ipynb
aoc-2016/10/: 10.ipynb
aoc-2016/11/: 11.ipynb  11_take_2.ipynb  stolen.ipynb
aoc-2016/12/: 12.ipynb
aoc-2016/13/: 13.ipynb
aoc-2016/14/: 14.ipynb
aoc-2016/15/: 15.ipynb
aoc-2016/16/: 16.ipynb
aoc-2016/17/: 17.ipynb
aoc-2016/18/: 18.ipynb
aoc-2016/19/: 19.ipynb
aoc-2016/20/: 20.ipynb
aoc-2016/21/: 21.ipynb
aoc-2016/22/: 22.ipynb  input.txt  test_input.txt
aoc-2016/23/: 23.ipynb
aoc-2017/day-01/: Cargo.toml  README.md
aoc-2017/day-02/: Cargo.toml  README.md
aoc-2017/day-03/: Cargo.toml  README.md
aoc-2017/day-04/: Cargo.toml  README.md
aoc-2017/day-05/: Cargo.toml  README.md
aoc-2017/day-06/: Cargo.toml  README.md
aoc-2017/day-07/: Cargo.toml  README.md
aoc-2018/day-01/: README.md  day_1.hs  day_1.py
aoc-2018/day-02/: README.md  day_2.hs  day_2.py
aoc-2018/day-03/: README.md  day_3.py
aoc-2018/day-04/: README.md  day_4.py  input1.txt
aoc-2018/day-05/: README.md  day_5.py
aoc-2018/day-06/: README.md  day_06.py
aoc-2018/day-07/: README.md  day_07.py
aoc-2018/day-08/: README.md  day_08.py
aoc-2018/day-09/: README.md  day_09.py
aoc-2018/day-10/: README.md  day_10.py
aoc-2018/day-11/: README.md  day_11.py
aoc-2018/day-12/: README.md  day_12.py
aoc-2018/day-13/: README.md  day_13.py  input.txt
aoc-2018/day-14/: README.md  day_14.cpp  day_14.py
aoc-2018/day-15/: README.md  day_15.cpp  day_15.py  input.txt
aoc-2018/day-16/: README.md  day_16.py
aoc-2018/day-17/: README.md  day_17.cpp  day_17.py
aoc-2018/day-18/: README.md  day_18.cpp
aoc-2018/day-19/: README.md  day_19_reverse.cpp  input.txt
aoc-2018/day-20/: README.md  day_20.cpp  input.txt
aoc-2018/day-21/: README.md  day_21.cpp
aoc-2018/day-22/: README.md  day_22.cpp  day_22.py  input.txt
aoc-2018/day-23/: README.md  day_23.py
aoc-2018/day-24/: README.md  day_24.py
aoc-2018/day-25/: README.md  day_25.py
aoc-2019/day-01/: README.md  day_1.py
aoc-2019/day-02/: README.md  day_2.py
aoc-2019/day-03/: README.md  day_3.py
aoc-2019/day-04/: README.md  day_4.py
aoc-2019/day-05/: README.md  day_5.cpp
aoc-2019/day-06/: README.md  day_6.py
aoc-2019/day-07/: .gitignore  CMakeLists.txt  Makefile  README.md  day_7.cpp  day_7_part_1.cpp  day_7_part_2.cpp  intcode.cpp  intcode.hpp
aoc-2019/day-08/: README.md  day_8.py
aoc-2019/day-09/: .gitignore  CMakeLists.txt  Makefile  README.md  day_9.cpp  intcode.cpp  intcode.hpp
aoc-2019/day-10/: README.md  day_10.py
aoc-2019/day-11/: Makefile  README.md  day_11.cpp  intcode.hpp
aoc-2019/day-12/: README.md  day_12.py
aoc-2019/day-13/: .gitignore  CMakeLists.txt  Makefile  README.md  day_13.cpp  input-hacked.txt  intcode.hpp
aoc-2019/day-14/: README.md  day_14.py  input-test.txt  input-test2.txt
aoc-2019/day-15/: .gitignore  CMakeLists.txt  Makefile  README.md  day_15.cpp  intcode.hpp
aoc_runner/: __init__.py
aocd-rs/: Cargo.toml  README.md
aocd-rs/src/: cache.rs  client.rs  lib.rs
init-day/: Cargo.toml
(+306 files in other folders)
