cabal-version:       2.4
name:                advent-of-code
version:             0.1.0.0
synopsis:            Advent of Code solutions
homepage:            https://github.com/bsamseth/advent-of-code
license:             MIT
license-file:        LICENSE
author:              Bendik Samseth
maintainer:          b.samseth@gmail.com
category:            Advent of Code

library
  exposed-modules:     AocHaskell.Input
  build-depends:       base ^>=4.13.0.0
  hs-source-dirs:      .
  default-language:    Haskell2010

executable aoc-2015-01
  main-is:             day_1.hs
  hs-source-dirs:      aoc-2015/day-01
  build-depends:       base ^>=4.13.0.0, advent-of-code
  default-language:    Haskell2010

executable aoc-2015-02
  main-is:             day_2.hs
  hs-source-dirs:      aoc-2015/day-02
  build-depends:       base ^>=4.13.0.0
                     , advent-of-code
                     , split
  default-language:    Haskell2010
