[tool.poetry]
name = "aoc_runner"
version = "0.1.0"
description = ""
authors = ["Bendik Samseth <b.samseth@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.19.4"
tomd = "^0.1.3"
bs4 = "^0.0.1"
requests = "^2.25.0"
matplotlib = "^3.5.1"
numba = "^0.56.4"
urllib3 = ">=1.24.2"
networkx = "^2.5"
z3-solver = "^4.8.9"
scipy = "^1.5.4"
tqdm = "^4.54.0"
pydantic = "^1.7.3"
toolz = "^0.11.1"
regex = "^2021.11.10"
parse = "^1.18.0"
llvmlite = { path = "/Users/bsamseth/programs/llvmlite-main/dist/llvmlite-0+unknown.tar.gz" }
pytesseract = "^0.3.8"
advent-of-code-data = { git = "https://github.com/bsamseth/advent-of-code-data" }

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.920"
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."adventofcode.user"]
bsamseth = "aoc_runner:plugin"
