[package]
name = "aocd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
shellexpand = "3.0.0"
